--- a/index.html
+++ b/index.html
@@ -1583,7 +1583,7 @@
         <ul class="clearfix">
             <li class="ff">
                 <img src="img2/9.jpg" alt=""/>
-                <a href="javascript:;">这箱子很好，外观漂亮，实用性强。很轻，有点软但不影响它的坚固。</a>
+                <a href="javascript:;">这箱子很好，外观漂亮，</a>
                 <span> 来自于 子书雁 的评价 </span>
                 <p>90分旅行箱 20寸 <b>299元</b></p>
             </li>
@@ -1801,39 +1801,39 @@
 <div class="w1226 last clearfix">
     <dl>
         <dt>来选购吧</dt>
-        <dd>在想啥呢</dd>
-        <dd>在想啥呢</dd>
-        <dd>在想啥呢</dd>
+        <dd>你好</dd>
+        <dd>你好</dd>
+        <dd>你好</dd>
+    </dl>
+    <dl>
+        <dt>你好</dt>
+        <dd>你好</dd>
+        <dd>你好</dd>
+        <dd>你好</dd>
+    </dl>
+    <dl>
+        <dt>你好</dt>
+        <dd>你好</dd>
+        <dd>你好</dd>
+        <dd>你好</dd>
+    </dl>
+    <dl>
+        <dt>你好</dt>
+        <dd>你好</dd>
+        <dd>你好</dd>
+        <dd>你好</dd>
     </dl>
     <dl>
         <dt>来选购吧</dt>
-        <dd>在想啥呢</dd>
-        <dd>在想啥呢</dd>
-        <dd>在想啥呢</dd>
+        <dd>你好</dd>
+        <dd>你好</dd>
+        <dd>你好</dd>
     </dl>
     <dl>
         <dt>来选购吧</dt>
-        <dd>在想啥呢</dd>
-        <dd>在想啥呢</dd>
-        <dd>在想啥呢</dd>
-    </dl>
-    <dl>
-        <dt>来选购吧</dt>
-        <dd>在想啥呢</dd>
-        <dd>在想啥呢</dd>
-        <dd>在想啥呢</dd>
-    </dl>
-    <dl>
-        <dt>来选购吧</dt>
-        <dd>在想啥呢</dd>
-        <dd>在想啥呢</dd>
-        <dd>在想啥呢</dd>
-    </dl>
-    <dl>
-        <dt>来选购吧</dt>
-        <dd>在想啥呢</dd>
-        <dd>在想啥呢</dd>
-        <dd>在想啥呢</dd>
+        <dd>你好</dd>
+        <dd>你好</dd>
+        <dd>你好</dd>
     </dl>
     <div class="lll">
 <i>400-100-5678</i>
